--- a/app/views/development_metrics/products/_general.erb
+++ b/app/views/development_metrics/products/_general.erb
@@ -1,29 +1,61 @@
 <div class="container">
   <div class="summary">
-    <div class='p-3 chart-container <%if current_page?(products_development_metrics_path)%>col-md-4'<% else %>'<% end %> >
-      <div class="metrics shadow-box">
-        <div class='row'>
-          <h4 class="p-3" style='margin-left:10px;'><%= metric_definition && metric_definition[:name] %></h4>
-          <span data-placement='right' class='metric_tooltip' style='margin-top: 4%;' aria-hidden='true' data-toggle='tooltip' title='<%= metric_definition && metric_definition[:explanation] %>'>?</span>
-        </div>
-        <% if defect_escape_rate %>
-
-          <%if current_page?(products_metrics_development_metrics_path)%>
-            <div class="metrics shadow-box">
-              <div class="graph">
-                <%= render 'development_metrics/defect_escape_rate/main_metric', defect_escape_rate: defect_escape_rate, details: true %>
+    <div class='p-3 chart-container <%if current_page?(products_development_metrics_path)%>col-md-8 info'<% else %>'<% end %> >
+        <% if has_jira_project %>
+          <% if show_defect_escape_rate %>
+              <div class="metrics shadow-box">
+                <div class='row'>
+                  <h4 class="p-3" style='margin-left:10px;'><%= defect_escape_rate_definition && defect_escape_rate_definition[:name] %></h4>
+                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= defect_escape_rate_definition && defect_escape_rate_definition[:explanation] %>'>?</span>
+                </div>
+                <%if current_page?(products_metrics_development_metrics_path)%>
+                  <div class="metrics shadow-box">
+                    <div class="graph">
+                      <%= render 'development_metrics/defect_escape_rate/main_metric', defect_escape_rate: defect_escape_rate, details: true, defect_escape_rate_definition: defect_escape_rate_definition %>
+                    </div>
+                  </div>
+                <% else %>
+                  <%= render partial: 'development_metrics/defect_escape_rate/values_details',
+                  locals: {
+                    metric: defect_escape_rate[:per_defect_escape_values].first[:data],
+                    details: false,
+                    defect_escape_rate_definition: defect_escape_rate_definition
+                  } if defect_escape_rate && defect_escape_rate[:per_defect_escape_values] %>
+                  <div class="distribution-report-button mr-3 mb-2"><%= link_to 'See details',
+                            products_metrics_development_metrics_path({product_name: product[:name], metric: { period: params&.dig(:metric, :period), name: 'defect_escape_rate'}}),
+                            class: 'btn btn-secondary'
+                  %></div>
+                <% end %>
               </div>
-            </div>
-          <% else %>
-            <%= render partial: 'development_metrics/defect_escape_rate/values_details',
-            locals: {
-              metric: defect_escape_rate[:per_defect_escape_values].first[:data],
-              details: false
-            } if defect_escape_rate && defect_escape_rate[:per_defect_escape_values] %>
-            <div class="distribution-report-button mr-3 mb-2"><%= link_to 'See details',
-                      products_metrics_development_metrics_path({product_name: product[:name], metric: { period: params&.dig(:metric, :period) }}),
+          <% end %>
+
+          <% if show_development_cycle %>
+              <div class="metrics shadow-box" style="margin-left:10%">
+                <div class='row'>
+                  <h4 class="p-3" style='margin-left:10px;'><%= development_cycle_definition && development_cycle_definition[:name] %></h4>
+                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= development_cycle_definition && development_cycle_definition[:explanation] %>'>?</span>
+                </div>
+                <%if current_page?(products_metrics_development_metrics_path)%>
+                  <div class="metrics shadow-box">
+                    <div class="graph">
+                      <%= render 'development_metrics/development_cycle/main_metric', development_cycle: development_cycle, development_cycle_definition: development_cycle_definition, details: true %>
+                    </div>
+                  </div>
+                <% else %>
+                  <%= render partial: 'development_metrics/development_cycle/values_details',
+                  locals: {
+                    metric: development_cycle[:per_development_cycle_average].first[:data],
+                    details: false,
+                    development_cycle_definition: development_cycle_definition
+                  } if development_cycle %>
+                  <div class="distribution-report-button mr-3 mb-2">
+                    <%= link_to 'See details',
+                      products_metrics_development_metrics_path({product_name: product[:name], metric: { period: params&.dig(:metric, :period), name: 'development_cycle'}}),
                       class: 'btn btn-secondary'
-            %></div>
+                    %>
+                  </div>
+                <% end %>
+              </div>
           <% end %>
         <% else %>
           <div class="summary col-md-12">
