--- a/app/views/development_metrics/products/_general.erb
+++ b/app/views/development_metrics/products/_general.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="summary">
-    <div class='p-3 chart-container <%if current_page?(products_development_metrics_path) && has_jira_project%>col-md-8 info'<% else %>'<% end %> >
+    <div class='p-3 chart-container <%if current_page?(products_development_metrics_path) && has_jira_project%>col-md-12 info'<% else %>'<% end %> >
         <% if has_jira_project %>
           <% if show_defect_escape_rate %>
               <div class="metrics shadow-box">
@@ -30,7 +30,7 @@
           <% end %>
 
           <% if show_development_cycle %>
-              <div class="metrics shadow-box" style="margin-left:10%">
+              <div class="metrics shadow-box" style="margin-left:5%">
                 <div class='row'>
                   <h4 class="p-3" style='margin-left:10px;'><%= development_cycle_definition && development_cycle_definition[:name] %></h4>
                   <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= development_cycle_definition && development_cycle_definition[:explanation] %>'>?</span>
@@ -54,6 +54,32 @@
                       class: 'btn btn-secondary'
                     %>
                   </div>
+                <% end %>
+              </div>
+          <% end %>
+          <% if show_planned_to_done %>
+              <div class="metrics shadow-box" style="margin-left:5%">
+                <div class='row'>
+                  <h4 class="p-3" style='margin-left:10px;'><%= planned_to_done_definition && planned_to_done_definition[:name] %></h4>
+                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= planned_to_done_definition && planned_to_done_definition[:explanation] %>'>?</span>
+                </div>
+                <%if current_page?(products_metrics_development_metrics_path)%>
+                  <div class="metrics shadow-box">
+                    <div class="graph">
+                      <%= render 'development_metrics/planned_to_done/main_metric', planned_to_done: planned_to_done, details: true, planned_to_done_definition: planned_to_done_definition %>
+                    </div>
+                  </div>
+                <% else %>
+                  <%= render partial: 'development_metrics/planned_to_done/values_details',
+                  locals: {
+                    metric: planned_to_done[:per_planned_to_done_average].first[:data],
+                    details: false,
+                    planned_to_done_definition: planned_to_done_definition
+                  } if planned_to_done && planned_to_done[:per_planned_to_done_average] %>
+                  <div class="distribution-report-button mr-3 mb-2"><%= link_to 'See details',
+                            products_metrics_development_metrics_path({product_name: product[:name], metric: { period: params&.dig(:metric, :period), name: 'planned_to_done'}}),
+                            class: 'btn btn-secondary'
+                  %></div>
                 <% end %>
               </div>
           <% end %>
