--- a/app/views/admin_mailer/notify_below_rate.html.erb
+++ b/app/views/admin_mailer/notify_below_rate.html.erb
@@ -10,21 +10,21 @@
 <p> <%= t('mailer.notify_below_rate.body.see_metric') %> 
     <% if @entity_is_repo -%>
         <%= link_to t('mailer.notify_below_rate.body.click_here'),
-        repositories_development_metrics_path({repository_name: @entity_name, metric: { period: @alert.frequency }}),
+        repositories_development_metrics_url({repository_name: @entity_name, metric: { period: @alert.frequency }}),
         method: :post %>.</p>
     <% else -%>
         <%= link_to t('mailer.notify_below_rate.body.click_here'),
-        departments_development_metrics_path({department_name: @entity_name, metric: { period: @alert.frequency }}),
+        departments_development_metrics_url({department_name: @entity_name, metric: { period: @alert.frequency }}),
         method: :post %>.</p>
     <% end -%>
 <p> <%= t('mailer.notify_below_rate.body.see_settings') %>
     <% if @entity_is_repo -%>
         <%= link_to t('mailer.notify_below_rate.body.click_here'), 
-        admin_settings_path(q: { key_eq: 'success_rate_' + @entity_name + '_' + @metric_name }),
+        admin_settings_url(q: { key_eq: 'success_rate_' + @entity_name + '_' + @metric_name }),
         method: :post %>.</p>
     <% else -%>
         <%= link_to t('mailer.notify_below_rate.body.click_here'), 
-        admin_settings_path(q: { key_eq: 'success_rate_' + @entity_name + '_' + @metric_name }),
+        admin_settings_url(q: { key_eq: 'success_rate_' + @entity_name + '_' + @metric_name }),
         method: :post %>.</p>
     <% end -%>
 
